# Python-practice

./: Assessment-1.py  README.md  pyproject.toml
Assessment-2/: autograder-assessment-2.py  submission.py
